# chest-xray-pneumonia-detection

./: .dockerignore  .gitignore  Dockerfile  Pneumonia Detection .ipynb  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  tests.yml
checkpoints/: .gitkeep
configs/: data.yaml  inference.yaml  model.yaml  train.yaml
docs/: architecture.md
logs/: .gitkeep
notebooks/: Pneumonia Detection.ipynb
scripts/: compare_with_resnet.py  evaluate.sh  generate_audit_report.py  generate_dummy_data.py  inference.sh  train.sh
src/pneumonia_detection/: __init__.py
src/pneumonia_detection/data/: dataloaders.py  dataset.py  preprocess.py  transforms.py
src/pneumonia_detection/evaluation/: evaluate.py
src/pneumonia_detection/inference/: predict.py
src/pneumonia_detection/models/: blocks.py  losses.py  model.py
src/pneumonia_detection/pipelines/: inference_pipeline.py  train_pipeline.py
src/pneumonia_detection/training/: trainer.py
src/pneumonia_detection/utils/: checkpoint.py  config.py  device.py  logging.py  metrics.py  model_summary.py  seed.py
tests/: conftest.py  test_dataset.py  test_inference.py  test_model.py  test_training.py
