[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pneumonia_detection"
version = "0.1.0"
description = "A production-grade Deep Learning pipeline for Pneumonia Detection in Chest X-Rays using PyTorch."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "pillow>=9.5.0",
    "torchinfo>=1.8.0",
    "pyyaml>=6.0.0",
    "numpy>=1.20.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pneumonia_detection*"]

[tool.pyrefly]
project-includes = ["src", "tests"]
search-path = ["."]

[tool.pyrefly.errors]
missing-import = false

